TEIID-207 changes to ensure that clients will more easily adapt between versions